// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line component between stops with branches renders and matches snapshot 1`] = `
"<Provider store={{...}}>
  <Line stopTree={{...}} fromId=\\"b\\" toId=\\"d\\" alerts={{...}}>
    <line className=\\"line-diagram-svg__line\\" strokeWidth=\\"10px\\" x1=\\"11px\\" x2=\\"11px\\" y1=\\"24px\\" y2=\\"31px\\" />
  </Line>
</Provider>"
`;

exports[`Line component between stops with disruptions renders and matches snapshot 1`] = `
"<Provider store={{...}}>
  <Line stopTree={{...}} fromId=\\"a\\" toId=\\"b\\" alerts={{...}}>
    <line className=\\"line-diagram-svg__line\\" strokeWidth=\\"10px\\" x1=\\"11px\\" x2=\\"11px\\" y1=\\"17px\\" y2=\\"24px\\" stroke=\\"url(#diagonalHatch)\\" />
  </Line>
</Provider>"
`;

exports[`Line component renders and matches snapshot 1`] = `
"<Provider store={{...}}>
  <svg>
    <Line stopTree={{...}} fromId=\\"a\\" toId=\\"b\\" alerts={{...}}>
      <line className=\\"line-diagram-svg__line\\" strokeWidth=\\"10px\\" x1=\\"11px\\" x2=\\"11px\\" y1=\\"17px\\" y2=\\"24px\\" />
    </Line>
  </svg>
</Provider>"
`;
